# keyboard_layout_optimizer

./: Cargo.toml  best.txt  best_grouped_07_12_24.txt  best_not_grouped.txt  confnotes.txt  final_not_grouped.txt  found_solutions.txt  found_solutions_grouped.txt  found_solutions_not_grouped.txt  liked_grouped.txt  notes.md  plot.sh  plot_not_grouped.sh  run.sh  run_not_grouped.sh  rungen.sh  runno.sh
config/evaluation/: default.yml
config/keyboard/: crkbd.yml  crkbd_not_grouped.yml
config/optimization/: sa.yml
keyboard_layout/src/: key.rs  keyboard.rs  layout.rs
keyboard_layout_optimizer/src/: common.rs
layout_evaluation/src/: cache.rs  evaluation.rs  ngram_mapper.rs  ngrams.rs  results.rs
layout_evaluation/src/metrics/: bigram_metrics.rs  layout_metrics.rs  trigram_metrics.rs  unigram_metrics.rs
layout_evaluation/src/metrics/bigram_metrics/: finger_repeats.rs  kla_distance.rs  kla_finger_usage.rs  kla_same_finger.rs  kla_same_hand.rs  manual_bigram_penalty.rs  movement_pattern.rs  no_handswitch_after_unbalancing_key.rs  oxey_lsbs.rs  oxey_sfbs.rs  symmetric_handswitches.rs
layout_evaluation/src/metrics/layout_metrics/: kla_home_key_words.rs  (+4 more)
layout_evaluation/src/ngram_mapper/: bigram_mapper.rs  common.rs  on_demand_ngram_mapper.rs  trigram_mapper.rs  unigram_mapper.rs
layout_optimization/layout_optimization_genetic/src/: optimization.rs
layout_optimization/layout_optimization_sa/src/: optimization.rs
ngrams/t-cadet/: 1-grams.txt  2-grams.txt  3-grams.txt
webui/layout_evaluation_wasm/src/: lib.rs
webui/layouts_webservice/src/: api.rs
(+19 files in other folders)
