[workspace]
members = [
  "keyboard_layout",
  "layout_evaluation",
  "layout_optimization/layout_optimization_common",
  "layout_optimization/layout_optimization_genetic",
  "layout_optimization/layout_optimization_sa",
  "keyboard_layout_optimizer",
]

exclude = [
  "webui/layouts_webservice",     # as long as its "rocket_db_pool" dependency is not on crates, it is not part of the workspace
  "webui/layout_evaluation_wasm",
]

[profile.release]
opt-level = 3          # Maximum optimizations
lto = "thin"           # Thin Link Time Optimization
codegen-units = 1      # Single unit for codegen
panic = "abort"        # Reduces binary size (no stack unwinding)
overflow-checks = false # Disable integer overflow checks
incremental = false    # Disable incremental compilation
strip = true
debug = false
